--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lama-dev-portfolio",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@react-three/drei": "^9.117.3",
-    "@react-three/fiber": "^8.17.10",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "@react-three/rapier": "^1.5.0",
+    "meshline": "^3.3.1",
     "motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lazyload": "^3.2.1",
     "react-type-animation": "^3.2.0",
-    "three": "^0.170.0"
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
